kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname ${INTERNAL_DOMAIN}.${SECRET_DOMAIN}
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${SVC_GATEWAY_INTERNAL}
    - type: IPAddress
      value: ::ffff:${SVC_GATEWAY_INTERNAL}
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: jory-dev-tls
