kubernetes/apps/base/kube-system/cilium/gateway/tcp-gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname tcp.${SECRET_DOMAIN}
  labels:
    gateway: tcp-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${SVC_GATEWAY_TCP}
    # - type: IPAddress
    #   value: ::ffff:${SVC_GATEWAY_TCP}
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: tcp
      protocol: TCP
      port: 80
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
